--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
-            <div class="container-fluid">
+        <nav class="navbar navbar-light navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow">
+            <div class="container-md">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">The Budgeteer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -19,13 +19,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>                       
                     </ul>
                 </div>
+            </div>
+            <div class="ms-auto me-2">
+                <select asp-items="@Model.Currencies" style="width: 70px"></select>
             </div>
         </nav>
     </header>
