--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
@@ -3863,14 +3863,14 @@ textarea.form-control-lg {
 .navbar {
   --bs-navbar-padding-x: 0;
   --bs-navbar-padding-y: 0.5rem;
-  --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), 0.65);
+  --bs-navbar-color: white;
   --bs-navbar-hover-color: rgba(var(--bs-emphasis-color-rgb), 0.8);
   --bs-navbar-disabled-color: rgba(var(--bs-emphasis-color-rgb), 0.3);
   --bs-navbar-active-color: rgba(var(--bs-emphasis-color-rgb), 1);
   --bs-navbar-brand-padding-y: 0.3125rem;
   --bs-navbar-brand-margin-end: 1rem;
   --bs-navbar-brand-font-size: 1.25rem;
-  --bs-navbar-brand-color: rgba(var(--bs-emphasis-color-rgb), 1);
+  --bs-navbar-brand-color: white;
   --bs-navbar-brand-hover-color: rgba(var(--bs-emphasis-color-rgb), 1);
   --bs-navbar-nav-link-padding-x: 0.5rem;
   --bs-navbar-toggler-padding-y: 0.25rem;
@@ -11912,6 +11912,14 @@ body {
 .form-control {
   background-color: white;
   color: black;
+}
+
+.navbar {
+  background-color: #1c1c1c;
+}
+
+.nav-link:hover, .navbar-brand:hover {
+  color: #cccccc;
 }
 
 .sidebar {
