--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿@using System.Globalization
-@model MVC.Budget.K_MYR.Models.HomeViewModel;
+@model LayoutModel<HomeModel>
 
 @{
     ViewData["Title"] = "Home Page";
-    var expensesTotal = Model.Expenses.Sum(c => c.Transactions.Sum(t => t.Amount));
-    var expensesBudget = Model.Expenses.Sum(c => c.Budget);
-    var happyExpenses = Model.Expenses.Sum(c => c.Transactions.Where(t => t.IsHappy).Sum(t => t.Amount));
-    var necessaryExpenses = Model.Expenses.Sum(c => c.Transactions.Where(t => t.IsNecessary).Sum(t => t.Amount));
+    var expensesTotal = Model.PageModel.Expenses.Sum(c => c.Transactions.Sum(t => t.Amount));
+    var expensesBudget = Model.PageModel.Expenses.Sum(c => c.Budget);
+    var happyExpenses = Model.PageModel.Expenses.Sum(c => c.Transactions.Where(t => t.IsHappy).Sum(t => t.Amount));
+    var necessaryExpenses = Model.PageModel.Expenses.Sum(c => c.Transactions.Where(t => t.IsNecessary).Sum(t => t.Amount));
 
-    var incomeTotal = Model.Income.Sum(c => c.Transactions.Sum(t => t.Amount));
-    var incomeBudget = Model.Income.Sum(c => c.Budget);
+    var incomeTotal = Model.PageModel.Income.Sum(c => c.Transactions.Sum(t => t.Amount));
+    var incomeBudget = Model.PageModel.Income.Sum(c => c.Budget);
 
-    var Overspending = Model.Expenses.Sum(c => Math.Max(0, c.Transactions.Sum(t => t.Amount) - c.Budget));
+    var Overspending = Model.PageModel.Expenses.Sum(c => Math.Max(0, c.Transactions.Sum(t => t.Amount) - c.Budget));
 }
 
 <section>
@@ -35,6 +35,7 @@
                 </ul>
                 <h5>Display</h5>
                 <ul>
+                    <li>Locale</li>
                     <li>Locale</li>
                     <li>Currency</li>
                     <li>Other Settings</li>
@@ -79,7 +80,7 @@
                 <h1 class="text-center">My Budget</h1>
                 <h4 class="text-center">February 2024</h4>
                 <div class="statistics mt-4">
-                    <h5 class="text-center">Total Overspending: @Overspending.ToString("C2") </h5>
+                    <h5 class="text-center">Total Overspending: @Overspending.ToString("C2", Model.Culture) </h5>
                     <h5 class="text-center">Sentiment Turnover Rate: </h5>
                     <h5 class="text-center">Necessity Turnover Rate: </h5>
                 </div>
@@ -101,14 +102,14 @@
                     Income
                 </h5>
                 <h5 class="accordion-header">
-                    @incomeTotal.ToString("C2") / @incomeBudget.ToString("C2")
+                    @incomeTotal.ToString("C2", Model.Culture) / @incomeBudget.ToString("C2", Model.Culture)
                 </h5>
                 <img class="add-icon ms-auto" src="~/img/svg/plus.svg" alt="" width="20px;" />
                 <div class="accordion-caret rotate"></div>
             </div>
             <div id="collapseIncome" class="accordion-collapse collapse show" aria-labelledby="accordionIncomeHeader">
                 <div class="accordion-body">
-                    @foreach (var category in Model.Income)
+                    @foreach (var category in Model.PageModel.Income)
                     {
                         var spent = @category.Transactions.Sum(t => t.Amount);
                         var progressbarWidth = spent / category.Budget * 100;
@@ -117,8 +118,8 @@
                             <div class="border-container">
                                 <div class="content">
                                     <div class="category-body">
-                                        <div>@(category.Name)</div>
-                                        <div class="ms-auto">Balance: @(spent.ToString("C2")) / @(Html.DisplayFor(m => category.Budget))</div>
+                                        <div>@Html.Encode(category.Name)</div>
+                                        <div class="ms-auto">Balance: @(spent.ToString("C2", Model.Culture)) / @category.Budget.ToString("C2", Model.Culture)</div>
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: @((int)progressbarWidth)%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
@@ -140,16 +141,16 @@
                     Expenses
                 </h5>
                 <h5 class="accordion-header">
-                    @expensesTotal.ToString("C2") / @expensesBudget.ToString("C2")
+                    @expensesTotal.ToString("C2", Model.Culture) / @expensesBudget.ToString("C2", Model.Culture)
                 </h5>
                 <img class="add-icon ms-auto" src="~/img/svg/plus.svg" alt="" width="20px;" />
                 <div class="accordion-caret rotate"></div>
             </div>
             <div id="collapseExpenses" class="accordion-collapse collapse show" aria-labelledby="accordionExpensesHeader">
                 <div class="accordion-body">
-                    @foreach (var category in Model.Expenses)
+                    @foreach (var category in Model.PageModel.Expenses)
                     {
-                        var sumTransactions = category.Transactions.Sum(t => t.Amount);
+                        var sumTransactions = category.Transactions.Where(t => t.DateTime.Month == DateTime.UtcNow.Month && t.DateTime.Year == DateTime.UtcNow.Year).Sum(t => t.Amount);
                         var progressbarWidth = sumTransactions / category.Budget * 100;
 
                         var color = progressbarWidth < 50 ? "bg-success" : progressbarWidth < 85 ? "bg-warning" : "bg-danger";
@@ -158,12 +159,12 @@
                             <div class="border-container">
                                 <div class="content">
                                     <div class="category-body">
-                                        <div class="me-auto">@category.Name</div>
+                                        <div class="me-auto">@Html.Encode(category.Name)</div>
                                         @if (sumTransactions > category.Budget)
                                         {
-                                            <div class="me-3">Overspending: @((sumTransactions - category.Budget).ToString("C2"))</div>
+                                            <div class="me-3">Overspending: @((sumTransactions - category.Budget).ToString("C2", Model.Culture))</div>
                                         }
-                                        <div>Balance: @sumTransactions.ToString("C2") / @Html.DisplayFor(m => category.Budget)</div>
+                                        <div>Balance: @sumTransactions.ToString("C2", Model.Culture) / @category.Budget.ToString("C2", Model.Culture)</div>
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-striped progress-bar-animated @color" role="progressbar" style="width: @((int)progressbarWidth)%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
@@ -185,22 +186,22 @@
                     Savings
                 </h5>
                 <h5 class="accordion-header">
-                    @Model.Savings.Sum(c => c.Transactions.Sum(t => t.Amount)).ToString("C2") / @Model.Savings.Sum(c => c.Budget).ToString("C2")
+                    @Model.PageModel.Savings.Sum(c => c.Transactions.Sum(t => t.Amount)).ToString("C2", Model.Culture) / @Model.PageModel.Savings.Sum(c => c.Budget).ToString("C2", Model.Culture)
                 </h5>
                 <img class="add-icon ms-auto" src="~/img/svg/plus.svg" alt="" width="20px;" />
                 <div class="accordion-caret rotate"></div>
             </div>
             <div id="collapseSavings" class="accordion-collapse collapse show" aria-labelledby="accordionSavingsHeader">
                 <div class="accordion-body">
-                    @foreach (var category in Model.Savings)
+                    @foreach (var category in Model.PageModel.Savings)
                     {
                         var sumTransactions = category.Transactions.Sum(t => t.Amount);
                         <div id="category_@category.Id" class="category" data-id="@category.Id">
                             <div class="border-container">
                                 <div class="content">
                                     <div class="category-body">
-                                        <div>@category.Name</div>
-                                        <div class="ms-auto">Balance: @sumTransactions.ToString("C2")  / @Html.DisplayFor(m => category.Budget)</div>
+                                        <div>@Html.Encode(category.Name)</div>
+                                        <div class="ms-auto">Balance: @sumTransactions.ToString("C2", Model.Culture)  / @category.Budget.ToString("C2", Model.Culture)</div>
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
@@ -216,8 +217,8 @@
     </div>
 </section>
 
-@await Html.PartialAsync("_IndexModals", Model.Category)
-@await Html.PartialAsync("_CategoryModals", Model.Transaction)
+@await Html.PartialAsync("_IndexModals", Model.PageModel.Category)
+@await Html.PartialAsync("_CategoryModals", Model.PageModel.Transaction)
 
 @section Scripts {
     @{
