--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_CategoryModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_CategoryModals.cshtml
@@ -38,7 +38,7 @@
                                                 <path fill="#ffe059" d="M1025,411.3A610.4,610.4,0,0,0,659.9,531.7a706.9,706.9,0,0,1,453.2-18.9,27.8,27.8,0,0,0-3.3,5.1c-18.2,33.9,18.9,89.1,82.7,123.3s130.4,34.6,148.6.8a38.6,38.6,0,0,0,3.7-10.5c165.2,128,271.9,328.1,272.9,553.1a613.3,613.3,0,0,0,21-159.6C1638.7,686.1,1363.9,411.3,1025,411.3Z" />
                                                 <ellipse fill="#ffe059" cx="1339.4" cy="698.8" rx="30.8" ry="52.8" transform="translate(396.9 1879.5) rotate(-79)" />
                                                 <ellipse fill="#ffe059" cx="1235.1" cy="718.7" rx="17.2" ry="25" transform="translate(-4.9 1429) rotate(-60)" />
-                                                <path d="M1146.1,883.2a30.6,30.6,0,0,1-13.7-3.2,30,30,0,0,1-13-40.4c26.2-51.3,63.4-79.5,104.7-79.5s78.5,28.2,104.7,79.5a30,30,0,1,1-53.4,27.3c-15-29.3-34.2-46.8-51.3-46.8s-36.3,17.5-51.3,46.8A29.9,29.9,0,0,1,1146.1,883.2Z" />
+                                                <path fill="#00305f" d="M1146.1,883.2a30.6,30.6,0,0,1-13.7-3.2,30,30,0,0,1-13-40.4c26.2-51.3,63.4-79.5,104.7-79.5s78.5,28.2,104.7,79.5a30,30,0,1,1-53.4,27.3c-15-29.3-34.2-46.8-51.3-46.8s-36.3,17.5-51.3,46.8A29.9,29.9,0,0,1,1146.1,883.2Z" />
                                                 <path fill="#00305f" d="M903.9,883.2a29.9,29.9,0,0,1-26.7-16.3c-15-29.3-34.2-46.8-51.3-46.8s-36.3,17.5-51.3,46.8a30,30,0,1,1-53.4-27.3c26.2-51.3,63.4-79.5,104.7-79.5s78.5,28.2,104.7,79.5a30,30,0,0,1-13,40.4A30.6,30.6,0,0,1,903.9,883.2Z" />
                                                 <path fill="#00305f" d="M863.1,1280.8a29.4,29.4,0,0,1-15.8-4.5,29.9,29.9,0,0,1-9.6-41.3,89.9,89.9,0,0,0,13.4-47.4,88.9,88.9,0,0,0-16.9-52.5,30,30,0,0,1,48.6-35.2,150.2,150.2,0,0,1,5.8,166.8A30.1,30.1,0,0,1,863.1,1280.8Z" />
                                                 <path fill="#00305f" d="M1186.9,1280.8a30.1,30.1,0,0,1-25.5-14.1,150.2,150.2,0,0,1,5.8-166.8,30,30,0,1,1,48.6,35.2,88.9,88.9,0,0,0-16.9,52.5,89.9,89.9,0,0,0,13.4,47.4,29.9,29.9,0,0,1-9.6,41.3A29.4,29.4,0,0,1,1186.9,1280.8Z" />
@@ -55,9 +55,9 @@
                                                 <circle fill="#ffc500" cx="1025" cy="1025" r="613.7" />
                                                 <path fill="#ff9f1e" d="M1068.5,1551.8c-339,0-613.7-274.8-613.7-613.7a613.5,613.5,0,0,1,44.4-229.8A610.7,610.7,0,0,0,411.3,1025c0,338.9,274.8,613.7,613.7,613.7,257.7,0,478.3-158.8,569.2-383.9C1486.8,1432.8,1291.5,1551.8,1068.5,1551.8Z" />
                                                 <ellipse fill="#00305f" cx="773.9" cy="896.3" rx="94.9" ry="60.2" transform="translate(-155.1 1630.7) rotate(-87.5)" />
-                                                <circle cx="803.6" cy="857.7" r="16.6" />
+                                                <circle fill="#00305f" cx="803.6" cy="857.7" r="16.6" />
                                                 <ellipse fill="#00305f" cx="1276.1" cy="896.3" rx="60.2" ry="94.9" transform="translate(-37.7 56.1) rotate(-2.5)" />
-                                                <circle cx="1296.4" cy="857.7" r="16.6" />
+                                                <circle fill="#00305f" cx="1296.4" cy="857.7" r="16.6" />
                                                 <path fill="#ffe059" d="M1025,411.3A610.4,610.4,0,0,0,659.9,531.7a706.9,706.9,0,0,1,453.2-18.9,27.8,27.8,0,0,0-3.3,5.1c-18.2,33.9,18.9,89.1,82.7,123.3s130.4,34.6,148.6.8a38.6,38.6,0,0,0,3.7-10.5c165.2,128,271.9,328.1,272.9,553.1a613.3,613.3,0,0,0,21-159.6C1638.7,686.1,1363.9,411.3,1025,411.3Z" />
                                                 <ellipse fill="#ffe059" cx="1339.4" cy="698.8" rx="30.8" ry="52.8" transform="translate(396.9 1879.5) rotate(-79)" />
                                                 <ellipse fill="#ffe059" cx="1235.1" cy="718.7" rx="17.2" ry="25" transform="translate(-4.9 1429) rotate(-60)" />
