--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_IndexModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_IndexModals.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVC.Budget.K_MYR.Models.CategoryPost;
+﻿@model MVC.Budget.K_MYR.Models.Category;
 
 <section id="modals">
     <div class="modal fade" id="add-category-modal" tabindex="-1" aria-labelledby="add-category-label" aria-hidden="true">
@@ -23,6 +23,36 @@
                         </div>
                         <div class="form-group mt-2 d-flex align-items-center justify-content-center">
                             <input type="submit" value="Add" class="px-4" /> 
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="update-category-modal" tabindex="-1" aria-labelledby="update-category-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="update-category-label"></h5>
+                    <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="update-category-form" asp-controller="Categories" asp-action="PutCategory" method="PUT">
+                        <input type="hidden" asp-for="GroupId" value="" />
+                        <input type="hidden" asp-for="Id" value="" />
+                        <div class="form-group">
+                            <label asp-for="Name" class="control-label"></label>
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Budget" class="control-label"></label>
+                            <input asp-for="Budget" class="form-control" />
+                            <span asp-validation-for="Budget" class="text-danger"></span>
+                        </div>
+                        <div class="form-group mt-2 d-flex align-items-center justify-content-center">
+                            <input type="submit" value="Edit" class="px-4" /> 
                         </div>
                     </form>
                 </div>
