--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_CategoryModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_CategoryModals.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MVC.Budget.K_MYR.Models.Transaction;
 
-<section id="modals">
+<section id="transaction-modals">
     <div class="modal fade" id="add-transaction-modal" tabindex="-1" aria-labelledby="add-transaction-label" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
