--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_IndexModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_IndexModals.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MVC.Budget.K_MYR.Models.Category;
 
-<section id="modals">
+<section id="category-modals">
     <div class="modal fade" id="add-category-modal" tabindex="-1" aria-labelledby="add-category-label" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
