--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
@@ -35,8 +35,73 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+
+    <section>
+        <div id="sidebar" class="sidebar collapsed">
+            <svg id="sidebar-caret" class="sidebar-caret" width="30" height="35" fill="#ffffff" viewBox="0 0 15 15">
+                <path d="M3.204 5h9.592L8 10.481zm-.753.659 4.796 5.48a1 1 0 0 0 1.506 0l4.796-5.48c.566-.647.106-1.659-.753-1.659H3.204a1 1 0 0 0-.753 1.659" />
+            </svg>
+            <div id="sidebar-container" class="sidebar-container">
+                <div class="sidebar-category">
+                    <h5>Budget</h5>
+                    <ul>
+                        <li>Add New Budget</li>
+                        <li>Edit Budget</li>
+                        <li>Delete Budget</li>
+                    </ul>
+                    <h5>Categories</h5>
+                    <ul>
+                        <li data-bs-toggle="modal" data-bs-target="#add-category-modal">Add New Category</li>
+                        <li>Edit Category</li>
+                        <li>Delete Category</li>
+                    </ul>
+                    <h5>Display</h5>
+                    <ul>
+                        <li>Locale</li>
+                        <li>Locale</li>
+                        <li>Currency</li>
+                        <li>Other Settings</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div id="action-sidebar">
+            <div id="reevaluation-button-container">
+                <svg id="reevaluation-button" width="50px" height="50px" viewBox="0 0 512 512">
+                    <path fill="#ffffff" d="M252.314 19.957c-72.036.363-142.99 33.534-189.18 95.97-69.83 94.39-59.125 223.32 19.85 304.993l-37.238 50.332 151.22-22.613L174.35 297.42l-43.137 58.308c-44.08-54.382-47.723-133.646-4.16-192.53 30.676-41.466 77.863-63.504 125.758-63.753 16.344-.085 32.766 2.382 48.645 7.467l-6.963-46.55c-23.858-4.86-47.908-5.026-71.017-.997-59.232 7.322-113.994 39.918-148.157 91.215 35.65-65.89 103.774-105.918 176.043-107.744 1.673-.042 3.347-.063 5.023-.065 14.8-.01 29.748 1.596 44.597 4.905l48.608-7.268c-31.14-13.906-64.32-20.62-97.274-20.453zm212.93 22.055l-151.217 22.61 22.614 151.22 41.126-55.588c42.204 54.29 45.092 132.048 2.187 190.043-40.22 54.367-108.82 75.32-170.19 57.566l6.522 43.598c28.726 5.533 58.236 4.414 86.203-3.07 37.448-5.957 73.34-22.05 103.16-47.728-49.196 54.65-122.615 77.514-191.744 64.34l-55.8 8.344c99.03 43.7 218.402 14.77 285.51-75.938 69.13-93.445 59.34-220.743-17.483-302.53l39.114-52.866z" />
+                </svg>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div id="menu-container" data-category="0">
+            <div id="menu" class="menu">
+                @Html.AntiForgeryToken()
+                <span class="toggle" id="close-menu">
+                    <svg class="close" viewBox="0 0 512 512"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M368 368L144 144M368 144L144 368" /></svg>
+                </span>
+                <span id="details-menu" class="span-box" style="--i:0">
+                    <svg class="details" viewBox="0 0 512 512"><path d="M32 32v432a16 16 0 0016 16h432" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /><rect x="96" y="224" width="80" height="192" rx="20" ry="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /><rect x="240" y="176" width="80" height="240" rx="20" ry="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /><rect x="383.64" y="112" width="80" height="304" rx="20" ry="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /></svg>
+                </span>
+                <span id="add-menu" class="span-box" style="--i:1">
+                    <svg class="plus" viewBox="0 0 512 512"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M256 112v288M400 256H112" /></svg>
+                </span>
+                <span id="edit-menu" class="span-box" style="--i:2">
+                    <svg class="pen" viewBox="0 0 512 512"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M364.13 125.25L87 403l-23 45 44.99-23 277.76-277.13-22.62-22.62zM420.69 68.69l-22.62 22.62 22.62 22.63 22.62-22.63a16 16 0 000-22.62h0a16 16 0 00-22.62 0z" /></svg>
+                </span>
+                <span id="delete-menu" class="span-box" style="--i:3">
+                    <svg class="trash" viewBox="0 0 512 512"><path d="M112 112l20 320c.95 18.49 14.4 32 32 32h184c17.67 0 30.87-13.51 32-32l20-320" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /><path stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M80 112h352" /><path d="M192 112V72h0a23.93 23.93 0 0124-24h80a23.93 23.93 0 0124 24h0v40M256 176v224M184 176l8 224M328 176l-8 224" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /></svg>
+                </span>
+            </div>
+        </div>
+    </section>
+
+    <div class="container main-container">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
